@@ -193,7 +193,7 @@ bgcolor="#ffffff">
       <LI>Event_Service</LI>
       <LI>FTRT_Event_Service</LI>
       <LI>FTRT_Event_Service</LI>
-      <LI>FT_ReplicationManager </LI>
+      <LI>FT_ReplicationManager/tao_ft_replicationmanager</LI>
       <LI>FT_Service</LI>
       <LI>Fault_Detector</LI>
       <LI>Fault_Notifier</LI>
